[package]
name = "resin"
version = "0.1.7"
authors = ["drbawb <drbawb@fatalsyntax.com>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
byteorder = "1.3"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processenv", "winbase"] }
